Actions
Bug #11979
closedlibshell: bitwise comparison always evaluates to false
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:
Description
Build error with gcc 8:
../common/sh/nvtree.c: In function 'nv_attribute': ../common/sh/nvtree.c:431:34: error: bitwise comparison always evaluates to false [-Werror=tautological-compare] if((attr&NV_NOPRINT|NV_INTEGER)==NV_NOPRINT) ^~ cc1: all warnings being treated as errors
Updated by Electric Monk almost 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit c4fc965c904c30ee88c7ec42768b39cdbb328de9
commit c4fc965c904c30ee88c7ec42768b39cdbb328de9 Author: Toomas Soome <tsoome@me.com> Date: 2019-12-03T18:47:59.000Z 11979 libshell: bitwise comparison always evaluates to false Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions